[package]
name = "froggy"
version = "0.3.0"
# Attention: when modifying, also modify html_root_url in lib.rs
authors = ["Dzmitry Malyshau <kvarkus@gmail.com>",
           "Ilya Bogdanov <fumlead@gmail.com>",
           "Anton Makarow <amakarow@stud.hs-heilbronn.de>"]
documentation = "https://docs.rs/froggy/"
repository = "https://github.com/kvark/froggy"
keywords = ["gamedev", "ecs"]
license = "MIT/Apache-2.0"
categories = ["data-structures"]
exclude = ["doc", ".travis.yml"]
description = """
Froggy is a prototype for the Component Graph System programming model. It aims to combine the convenience of composition-style Object-Oriented Programming with the performance close to Entity-Component Systems.
"""
readme = "README.md"

[workspace]
members = ["demos/cubes"]

[dependencies]
spin = {version="0.4", default-features=false }
